[package]
name = "tapl"
version = "0.1.0"
edition = "2021"
build = "build.rs"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
lalrpop = "0.19.7"

[dependencies]
lalrpop-util = {version = "^0.19", features = ["lexer"]}
regex = "1"
rustyline = "9.1.2"
